continuar: I was development at oAuthController, I need to create an endpoint to set an application role to userId. 
Important: Like as Google oauth2, I think to create two endpoints in the OAuth tag.
- user-assign-application-role (current)
- user-info (get basic user info by token. So that contains the userId in the data column from database)

* result json esta campos bit deve ser boolean a apresentação
* pensar como a aplicação irá obter o contexto inicial ao abrir o identityserver. provavelmente usando uma conta super usuario
* revisar todos os metodos novos


2 Api endpoint result show 400 badrequest mensages with the word case correcty. There is situations when the attribute name is showing diferents word case
Examples: 

Wrong ->  BadRequest 400 The Email is required.
OK    ->  BadRequest 400 The email is required.

1.2 Standardize the GET queries from the GET request so that the login attribute names have similar nomenclatures;
For exemple: GET query name today -> token, correctily -> refreshToken (like the login body attribute)

3 Create a new attribute in the return API, showing the something like as "userMessage". So that, this is distinct with the current "message" because it is so tecnical info about the HTTP result.

1.1. Create on the table Users the column "AlwaysLoginWith2StepAuth"

1. Check priority the undefined after run application

** security: implement validation to count wrong tried log in to prevent robots requests.

** generate keys to cripty the tokens and codes info, every client app need to know about your own cript secret key

* why refresh token is inserting two lines in database?